SVN: merge from trunk-3-3 to CLO-108
git-svn-id: https://svn.javlin.eu/svn/cloveretl.opensource/branches/issue-CLO-108@11586 a09ad3ba-1a0f-0410-b1b9-c67202f10d70