@@ -51,7 +51,7 @@ baseD = new File( new File('').absolutePath )
 engineD = new File( baseD, "cloveretl.engine" ) 
 testEnvironmentD = new File( baseD, "cloveretl.test.environment" ) 
 
-antCustomEnv = ["ANT_OPTS":"-Xmx500m"]
+antCustomEnv = ["ANT_OPTS":"-Xmx2048m -XX:MaxPermSize=256m"]
 if( !runTests ){
 	// compile engine and run some tests
 	antBaseD = engineD
